Web Inspector: Auto-attach fails after r179562, initialization too late after dispatch https://bugs.webkit.org/show_bug.cgi?id=143682

Reviewed by Timothy Hatcher.

* inspector/remote/RemoteInspector.mm:
(Inspector::RemoteInspector::singleton):
If we are on the main thread, run the initialization immediately.
Otherwise dispatch to the main thread. This way if the first JSContext
was created on the main thread it can get auto-attached if applicable.

Canonical link: https://commits.webkit.org/161773@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182825 268f45cc-cd09-0410-ab3c-d52691b4dbfc